Vagrant/Vagrant_Shared_Folder/bison3-example-calculator/calc++-parser.output
Grammar

    0 $accept: s "end of file"

    1 s: package imports funcdefs

    2 package: "package" "identifier" ";"

    3 imports: import imports
    4        | %empty

    5 import: "import" "\"" "identifier" "\"" ";"

    6 funcdefs: funcdef funcdefs
    7         | %empty

    8 funcdef: "func" "identifier" "(" ")" "{" funcbody "}"

    9 funcbody: assignment funcbody
   10         | declaration funcbody
   11         | %empty

   12 declaration: "var" "identifier" ";"

   13 assignment: "identifier" "=" assignable ";"
   14           | "var" "identifier" "=" assignable ";"

   15 assignable: exp
   16           | "\"" "identifier" "\""

   17 exp: exp "+" exp
   18    | exp "-" exp
   19    | exp "*" exp
   20    | exp "/" exp
   21    | "(" exp ")"
   22    | "identifier"
   23    | "number"


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
"=" (258) 13 14
"-" (259) 18
"+" (260) 17
"*" (261) 19
"/" (262) 20
"(" (263) 8 21
")" (264) 8 21
"{" (265) 8
"}" (266) 8
";" (267) 2 5 12 13 14
"package" (268) 2
"import" (269) 5
"func" (270) 8
"var" (271) 12 14
"\"" (272) 5 16
"identifier" (273) 2 5 8 12 13 14 16 22
"number" (274) 23


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
s (21)
    on left: 1, on right: 0
package (22)
    on left: 2, on right: 1
imports (23)
    on left: 3 4, on right: 1 3
import (24)
    on left: 5, on right: 3
funcdefs (25)
    on left: 6 7, on right: 1 6
funcdef (26)
    on left: 8, on right: 6
funcbody (27)
    on left: 9 10 11, on right: 8 9 10
declaration (28)
    on left: 12, on right: 10
assignment (29)
    on left: 13 14, on right: 9
assignable (30)
    on left: 15 16, on right: 13 14
exp (31)
    on left: 17 18 19 20 21 22 23, on right: 15 17 18 19 20 21


State 0

    0 $accept: . s "end of file"

    "package"  shift, and go to state 1

    s        go to state 2
    package  go to state 3


State 1

    2 package: "package" . "identifier" ";"

    "identifier"  shift, and go to state 4


State 2

    0 $accept: s . "end of file"

    "end of file"  shift, and go to state 5


State 3

    1 s: package . imports funcdefs

    "import"  shift, and go to state 6

    $default  reduce using rule 4 (imports)

    imports  go to state 7
    import   go to state 8


State 4

    2 package: "package" "identifier" . ";"

    ";"  shift, and go to state 9


State 5

    0 $accept: s "end of file" .

    $default  accept


State 6

    5 import: "import" . "\"" "identifier" "\"" ";"

    "\""  shift, and go to state 10


State 7

    1 s: package imports . funcdefs

    "func"  shift, and go to state 11

    $default  reduce using rule 7 (funcdefs)

    funcdefs  go to state 12
    funcdef   go to state 13


State 8

    3 imports: import . imports

    "import"  shift, and go to state 6

    $default  reduce using rule 4 (imports)

    imports  go to state 14
    import   go to state 8


State 9

    2 package: "package" "identifier" ";" .

    $default  reduce using rule 2 (package)


State 10

    5 import: "import" "\"" . "identifier" "\"" ";"

    "identifier"  shift, and go to state 15


State 11

    8 funcdef: "func" . "identifier" "(" ")" "{" funcbody "}"

    "identifier"  shift, and go to state 16


State 12

    1 s: package imports funcdefs .

    $default  reduce using rule 1 (s)


State 13

    6 funcdefs: funcdef . funcdefs

    "func"  shift, and go to state 11

    $default  reduce using rule 7 (funcdefs)

    funcdefs  go to state 17
    funcdef   go to state 13


State 14

    3 imports: import imports .

    $default  reduce using rule 3 (imports)


State 15

    5 import: "import" "\"" "identifier" . "\"" ";"

    "\""  shift, and go to state 18


State 16

    8 funcdef: "func" "identifier" . "(" ")" "{" funcbody "}"

    "("  shift, and go to state 19


State 17

    6 funcdefs: funcdef funcdefs .

    $default  reduce using rule 6 (funcdefs)


State 18

    5 import: "import" "\"" "identifier" "\"" . ";"

    ";"  shift, and go to state 20


State 19

    8 funcdef: "func" "identifier" "(" . ")" "{" funcbody "}"

    ")"  shift, and go to state 21


State 20

    5 import: "import" "\"" "identifier" "\"" ";" .

    $default  reduce using rule 5 (import)


State 21

    8 funcdef: "func" "identifier" "(" ")" . "{" funcbody "}"

    "{"  shift, and go to state 22


State 22

    8 funcdef: "func" "identifier" "(" ")" "{" . funcbody "}"

    "var"         shift, and go to state 23
    "identifier"  shift, and go to state 24

    $default  reduce using rule 11 (funcbody)

    funcbody     go to state 25
    declaration  go to state 26
    assignment   go to state 27


State 23

   12 declaration: "var" . "identifier" ";"
   14 assignment: "var" . "identifier" "=" assignable ";"

    "identifier"  shift, and go to state 28


State 24

   13 assignment: "identifier" . "=" assignable ";"

    "="  shift, and go to state 29


State 25

    8 funcdef: "func" "identifier" "(" ")" "{" funcbody . "}"

    "}"  shift, and go to state 30


State 26

   10 funcbody: declaration . funcbody

    "var"         shift, and go to state 23
    "identifier"  shift, and go to state 24

    $default  reduce using rule 11 (funcbody)

    funcbody     go to state 31
    declaration  go to state 26
    assignment   go to state 27


State 27

    9 funcbody: assignment . funcbody

    "var"         shift, and go to state 23
    "identifier"  shift, and go to state 24

    $default  reduce using rule 11 (funcbody)

    funcbody     go to state 32
    declaration  go to state 26
    assignment   go to state 27


State 28

   12 declaration: "var" "identifier" . ";"
   14 assignment: "var" "identifier" . "=" assignable ";"

    "="  shift, and go to state 33
    ";"  shift, and go to state 34


State 29

   13 assignment: "identifier" "=" . assignable ";"

    "("           shift, and go to state 35
    "\""          shift, and go to state 36
    "identifier"  shift, and go to state 37
    "number"      shift, and go to state 38

    assignable  go to state 39
    exp         go to state 40


State 30

    8 funcdef: "func" "identifier" "(" ")" "{" funcbody "}" .

    $default  reduce using rule 8 (funcdef)


State 31

   10 funcbody: declaration funcbody .

    $default  reduce using rule 10 (funcbody)


State 32

    9 funcbody: assignment funcbody .

    $default  reduce using rule 9 (funcbody)


State 33

   14 assignment: "var" "identifier" "=" . assignable ";"

    "("           shift, and go to state 35
    "\""          shift, and go to state 36
    "identifier"  shift, and go to state 37
    "number"      shift, and go to state 38

    assignable  go to state 41
    exp         go to state 40


State 34

   12 declaration: "var" "identifier" ";" .

    $default  reduce using rule 12 (declaration)


State 35

   21 exp: "(" . exp ")"

    "("           shift, and go to state 35
    "identifier"  shift, and go to state 37
    "number"      shift, and go to state 38

    exp  go to state 42


State 36

   16 assignable: "\"" . "identifier" "\""

    "identifier"  shift, and go to state 43


State 37

   22 exp: "identifier" .

    $default  reduce using rule 22 (exp)


State 38

   23 exp: "number" .

    $default  reduce using rule 23 (exp)


State 39

   13 assignment: "identifier" "=" assignable . ";"

    ";"  shift, and go to state 44


State 40

   15 assignable: exp .
   17 exp: exp . "+" exp
   18    | exp . "-" exp
   19    | exp . "*" exp
   20    | exp . "/" exp

    "-"  shift, and go to state 45
    "+"  shift, and go to state 46
    "*"  shift, and go to state 47
    "/"  shift, and go to state 48

    $default  reduce using rule 15 (assignable)


State 41

   14 assignment: "var" "identifier" "=" assignable . ";"

    ";"  shift, and go to state 49


State 42

   17 exp: exp . "+" exp
   18    | exp . "-" exp
   19    | exp . "*" exp
   20    | exp . "/" exp
   21    | "(" exp . ")"

    "-"  shift, and go to state 45
    "+"  shift, and go to state 46
    "*"  shift, and go to state 47
    "/"  shift, and go to state 48
    ")"  shift, and go to state 50


State 43

   16 assignable: "\"" "identifier" . "\""

    "\""  shift, and go to state 51


State 44

   13 assignment: "identifier" "=" assignable ";" .

    $default  reduce using rule 13 (assignment)


State 45

   18 exp: exp "-" . exp

    "("           shift, and go to state 35
    "identifier"  shift, and go to state 37
    "number"      shift, and go to state 38

    exp  go to state 52


State 46

   17 exp: exp "+" . exp

    "("           shift, and go to state 35
    "identifier"  shift, and go to state 37
    "number"      shift, and go to state 38

    exp  go to state 53


State 47

   19 exp: exp "*" . exp

    "("           shift, and go to state 35
    "identifier"  shift, and go to state 37
    "number"      shift, and go to state 38

    exp  go to state 54


State 48

   20 exp: exp "/" . exp

    "("           shift, and go to state 35
    "identifier"  shift, and go to state 37
    "number"      shift, and go to state 38

    exp  go to state 55


State 49

   14 assignment: "var" "identifier" "=" assignable ";" .

    $default  reduce using rule 14 (assignment)


State 50

   21 exp: "(" exp ")" .

    $default  reduce using rule 21 (exp)


State 51

   16 assignable: "\"" "identifier" "\"" .

    $default  reduce using rule 16 (assignable)


State 52

   17 exp: exp . "+" exp
   18    | exp . "-" exp
   18    | exp "-" exp .
   19    | exp . "*" exp
   20    | exp . "/" exp

    "*"  shift, and go to state 47
    "/"  shift, and go to state 48

    $default  reduce using rule 18 (exp)


State 53

   17 exp: exp . "+" exp
   17    | exp "+" exp .
   18    | exp . "-" exp
   19    | exp . "*" exp
   20    | exp . "/" exp

    "*"  shift, and go to state 47
    "/"  shift, and go to state 48

    $default  reduce using rule 17 (exp)


State 54

   17 exp: exp . "+" exp
   18    | exp . "-" exp
   19    | exp . "*" exp
   19    | exp "*" exp .
   20    | exp . "/" exp

    $default  reduce using rule 19 (exp)


State 55

   17 exp: exp . "+" exp
   18    | exp . "-" exp
   19    | exp . "*" exp
   20    | exp . "/" exp
   20    | exp "/" exp .

    $default  reduce using rule 20 (exp)
